// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link Auto Tooltip 1`] = `
<div>
  <span
    aria-label="a link"
    class=""
    data-mui-internal-clone-element="true"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
      href="/"
    >
      a link
    </a>
  </span>
</div>
`;

exports[`Storyshots Link Basic 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
    href="/"
  >
    a link
  </a>
</div>
`;

exports[`Storyshots Link Explicit Tooltip 1`] = `
<div>
  <span
    aria-label="A tooltip"
    class=""
    data-mui-internal-clone-element="true"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
      href="/"
    >
      a link
    </a>
  </span>
</div>
`;

exports[`Storyshots Link Params 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
    href="/"
  >
    a link
  </a>
</div>
`;
